# pl_nouns

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
data/: rzecz_pol_compact.txt
nodes/: dictionary_service  dictionary_test
pl_nouns/: dictionary_client.py  dictionary_service.py  odmiana.py
scripts/: test
src/pl_nouns/: dictionary_client.py  odmiana.py
src/pl_nouns/data/: rzecz_pol_compact.txt
