<?xml version="1.0"?>
<package format="3">
  <name>pl_nouns</name>
  <version>0.0.0</version>
  <description>The pl_nouns package</description>

  <maintainer email="5305@pw.edu.pl">Dawid Seredynski</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <!-- Other tools and dependencies can be specified here -->
  </export>
</package>

