<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pl_nouns</name>
  <version>0.0.0</version>
  <description>The pl_nouns package</description>
  <maintainer email="5305@pw.edu.pl">Dawid Seredynski</maintainer>
  <maintainer email="adam-krawczyk@outlook.com">adam</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tiago_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
